--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,7 +2,9 @@
   width: 960px;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 25px
 }
 .buttons{
   width: 100px;
@@ -10,25 +12,34 @@
   color: white;
   background-color: black;
   text-align: center;
-
+  margin-top: 25px;
+  
+}
+.container{
+  display: flex;
+  justify-content: space-around;
+  border: 1px solid black;
 }
 .js-gif-box{
   display: flex;
   flex-wrap: wrap;
-  width: 960px;
-}
-
-.js-gif{
-  height: 200px;
-  width: 200px;
+  justify-content: space-evenly;
+  width: 700px;
   border: 1px solid black;
 }
-
 .gifBox{
-  height: 250px;
-  width: 250px;
+  height: 200px;
+  width: 200px;
+  margin-top:25px;
 }
 .imgBox{
   width: 100%;
   height: 100%;
+}
+.js-search-box{
+  border:1px solid black;
+  width: 400px;
+}
+.margin{
+  margin-left: 25px;
 }
